# sdr_time

./: .envrc  .gitignore  CURRENT_SETUP_GUIDE.md  README.md  fix_soapysdr_venv.sh  flake-complex.nix.bak  flake-simple.nix  flake.nix  kitty_test.py  pyproject.toml  setup-nix.sh  site-packages  test_llm_sidechannel.py  verify_ptp_clock.py
docs/: nix.md  sdr.md
nix/overlays/: sdr-overrides.nix
src/kitty_graphics/: __init__.py  protocol.py  test.py
src/llm_sidechannel/: README.md  __init__.py
src/llm_sidechannel/analysis/: __init__.py  expert_usage.py
src/llm_sidechannel/core/: __init__.py  config.py  mixtral_client.py  router_analyzer.py
src/llm_sidechannel/models/: __init__.py  mixtral_wrapper.py
src/llm_sidechannel/tools/: __init__.py  analyze_moe.py  query.py
src/sdr_experiments/: MeasureDelay.py  __init__.py  _version.py  kitty_test.py  soapy_log_handle.py  utils.py  verify_ptp_clock.py  waterfall.py
src/sdr_experiments/core/: __init__.py  device.py  logging.py  signal.py  timing.py
src/sdr_experiments/graphics/: __init__.py  kitty.py  waterfall.py
src/sdr_experiments/tools/: __init__.py  kitty_test.py  measure_delay.py  ptp_sync.py  timed_capture.py  timing_test.py  verify_ptp.py  waterfall_tool.py
